refactor: rename project to experience

--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -55,7 +55,7 @@
 		padding-left: 20px;
 		padding-right: 20px;
 	}
-	.project-minimal-style {
+	.experience-minimal-style {
 		padding: 200px 0 0;
 	}
 	#arch-carousel {
@@ -94,7 +94,7 @@
 	}
 }
 @media (min-width: 992px) and (max-width: 1450px) {
-	.our-project-portfo {
+	.our-experience-portfo {
 		#isotop-gallery-wrapper {
 			.isotop-item {
 				width: 33.33333%;
@@ -225,8 +225,8 @@
 	.why-choose-us-app {
 		padding: 100px 0;
 	}
-	.project-details-creative {
-		.project-info {
+	.experience-details-creative {
+		.experience-info {
 			margin-right: 0;
 		}
 	}
@@ -236,7 +236,7 @@
 			padding-right: 15px;
 		}
 	}
-	.project-ms-grid {
+	.experience-ms-grid {
 		#isotop-gallery-wrapper {
 			margin: 0 -15px;
 			.grid-sizer {
@@ -396,21 +396,21 @@
 	.theme-title-three {
 		padding: 0 100px;
 	}
-	.project-details {
+	.experience-details {
 		.pd-banner {
 			height: 720px;
 		}
 	}
-	.project-details-creative {
+	.experience-details-creative {
 		.pd-banner {
-			.project-title-one {
+			.experience-title-one {
 				width: 67%;
 			}
 		}
 	}
-	.project-details-agency {
+	.experience-details-agency {
 		.pd-body {
-			.project-info {
+			.experience-info {
 				padding-left: 75px;
 			}
 		}
@@ -450,7 +450,7 @@
 			padding-top: 385px;
 		}
 	}
-	.project-ms-full-width {
+	.experience-ms-full-width {
 		#isotop-gallery-wrapper {
 			.grid-sizer {
 				width: 33.33333%;
@@ -925,7 +925,7 @@
 	.section-portfo {
 		margin-bottom: 140px;
 	}
-	.our-project-portfo {
+	.our-experience-portfo {
 		.isotop-menu-wrapper {
 			padding-left: 60px;
 		}
@@ -1107,7 +1107,7 @@
 			}
 		}
 	}
-	.project-standard {
+	.experience-standard {
 		.isotop-menu-wrapper {
 			padding-bottom: 50px;
 		}
@@ -1126,25 +1126,25 @@
 	.gallery-sidebar {
 		padding-top: 100px;
 	}
-	.project-details-standard {
+	.experience-details-standard {
 		.pd-header {
 			p {
 				padding: 60px 0 80px;
 			}
 		}
 	}
-	.project-details {
+	.experience-details {
 		.pd-body {
 			p {
 				padding-right: 0;
 			}
 		}
 	}
-	.project-details-creative {
+	.experience-details-creative {
 		.pd-body {
 			padding: 130px 0 140px;
 		}
-		.project-info {
+		.experience-info {
 			border-right: none;
 			border-top: 1px solid #e1e1e1;
 			padding-top: 40px;
@@ -1335,7 +1335,7 @@
 	.about-arch {
 		padding: 100px 0 250px;
 	}
-	.arch-project-gallery {
+	.arch-experience-gallery {
 		.isotop-menu-wrapper {
 			margin: 30px 0 25px;
 			li {
@@ -1443,7 +1443,7 @@
 			padding-bottom: 100px;
 		}
 	}
-	.op-project-one {
+	.op-experience-one {
 		padding-top: 150px;
 		.upper-heading {
 			p {
@@ -1537,7 +1537,7 @@
 	.studio-feature-area {
 		padding-bottom: 50px;
 	}
-	.studio-project-area {
+	.studio-experience-area {
 		.text-block.scree-lg {
 			display: none;
 		}
@@ -1572,7 +1572,7 @@
 	.large-filter-content.theme-sidebar-widget {
 		margin-top: 0;
 	}
-	.our-project {
+	.our-experience {
 		.isotop-menu-wrapper {
 			padding-bottom: 50px;
 		}
@@ -1608,7 +1608,7 @@
 			font-size: 250px;
 		}
 	}
-	.our-project-portfo {
+	.our-experience-portfo {
 		.isotop-menu-wrapper {
 			li {
 				margin-right: 22px;
@@ -1671,29 +1671,29 @@
 			padding-left: 1%;
 		}
 	}
-	.project-details-agency {
+	.experience-details-agency {
 		.pd-body {
-			.project-info {
+			.experience-info {
 				padding-left: 15px;
 			}
 		}
 	}
-	.project-details {
-		.project-title-one {
+	.experience-details {
+		.experience-title-one {
 			width: 60%;
 		}
 		.pd-banner {
 			height: 500px;
 		}
 	}
-	.project-details-creative {
+	.experience-details-creative {
 		.pd-banner {
-			.project-title-one {
+			.experience-title-one {
 				width: 95%;
 			}
 		}
 	}
-	.project-details.project-details-creative {
+	.experience-details.experience-details-creative {
 		.pd-footer {
 			>div {
 				width: 50%;
@@ -1744,7 +1744,7 @@
 			}
 		}
 	}
-	.op-project-one {
+	.op-experience-one {
 		.inner-wrapper {
 			.work-text {
 				font-size: 308px;
@@ -1768,7 +1768,7 @@
 			width: 50%;
 		}
 	}
-	.project-ms-full-width {
+	.experience-ms-full-width {
 		#isotop-gallery-wrapper {
 			.grid-sizer {
 				width: 50%;
@@ -1778,7 +1778,7 @@
 			}
 		}
 	}
-	.project-ms-grid {
+	.experience-ms-grid {
 		#isotop-gallery-wrapper {
 			.grid-sizer {
 				width: 50%;
@@ -1816,7 +1816,7 @@
 			width: 100%;
 		}
 	}
-	.project-ms-full-width {
+	.experience-ms-full-width {
 		#isotop-gallery-wrapper {
 			.grid-sizer {
 				width: 100%;
@@ -1826,7 +1826,7 @@
 			}
 		}
 	}
-	.project-ms-grid {
+	.experience-ms-grid {
 		#isotop-gallery-wrapper {
 			.grid-sizer {
 				width: 100%;
@@ -1917,19 +1917,19 @@
 			line-height: 35px;
 		}
 	}
-	.project-with-sidebar {
+	.experience-with-sidebar {
 		.page-title {
 			font-size: 40px;
 			line-height: 50px;
 		}
 	}
-	.project-details {
-		.project-title-two {
+	.experience-details {
+		.experience-title-two {
 			font-size: 40px;
 			line-height: 50px;
 			width: 100%;
 		}
-		.project-title-one {
+		.experience-title-one {
 			font-size: 40px;
 			line-height: 50px;
 			margin-bottom: 30px;
@@ -2126,7 +2126,7 @@
 			}
 		}
 	}
-	.our-project-portfo {
+	.our-experience-portfo {
 		.isotop-menu-wrapper {
 			li {
 				font-size: 18px;
@@ -2296,7 +2296,7 @@
 			font-size: 18px;
 		}
 	}
-	.project-standard {
+	.experience-standard {
 		#isotop-gallery-wrapper {
 			.grid-sizer {
 				width: 100%;
@@ -2306,9 +2306,9 @@
 			}
 		}
 	}
-	.project-details-agency {
+	.experience-details-agency {
 		.pd-body {
-			.project-info {
+			.experience-info {
 				padding: 35px 0 0 0;
 				border-left: none;
 				border-top: 1px solid #e1e1e1;
@@ -2322,9 +2322,9 @@
 			margin: 55px 0 60px;
 		}
 	}
-	.project-details-creative {
+	.experience-details-creative {
 		.pd-banner {
-			.project-title-one {
+			.experience-title-one {
 				width: 100%;
 				padding: 35px 20px;
 			}
@@ -2333,7 +2333,7 @@
 			padding: 0 20px;
 		}
 	}
-	.project-details.project-details-creative {
+	.experience-details.experience-details-creative {
 		.pd-footer {
 			>div {
 				width: 100%;
@@ -2497,7 +2497,7 @@
 			}
 		}
 	}
-	.op-project-one {
+	.op-experience-one {
 		.inner-wrapper {
 			.work-text {
 				display: none;
@@ -2517,7 +2517,7 @@
 			padding-right: 0;
 		}
 	}
-	.arch-project-gallery {
+	.arch-experience-gallery {
 		.inner-container {
 			padding: 5px 15px 0;
 		}
@@ -2565,12 +2565,12 @@
 			line-height: 48px;
 		}
 	}
-	.studio-project-area {
+	.studio-experience-area {
 		.studio-title {
 			margin-bottom: 50px;
 		}
 	}
-	.studio-project-holder {
+	.studio-experience-holder {
 		.text {
 			top: 0;
 			left: 0;
@@ -2597,8 +2597,8 @@
 			}
 		}
 	}
-	.project-details {
-		.project-info {
+	.experience-details {
+		.experience-info {
 			span {
 				font-size: 18px;
 			}
@@ -2718,7 +2718,7 @@
 			font-size: 70px;
 		}
 	}
-	.our-project-portfo {
+	.our-experience-portfo {
 		.text-content {
 			.gallery-button {
 				position: static;
@@ -2828,14 +2828,14 @@
 	.video-action-banner-one {
 		background-size: cover;
 	}
-	.our-project {
+	.our-experience {
 		.isotop-menu-wrapper {
 			li {
 				font-size: 18px;
 			}
 		}
 	}
-	.project-details-standard {
+	.experience-details-standard {
 		.pd-footer {
 			.share-icon {
 				position: absolute;
@@ -3173,7 +3173,7 @@
 			}
 		}
 	}
-	.op-project-one {
+	.op-experience-one {
 		#isotop-gallery-wrapper {
 			.item-content {
 				.text {
