--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2193,10 +2193,15 @@ textarea {
 			}
 		}
 
-		position: absolute;
 		top: 57px;
-		right: 65px;
 		z-index: 1;
+		position: absolute;
+		&:dir(rtl) {
+			left: 65px;
+		}
+		&:dir(ltr) {
+			right: 65px;
+		}
 	}
 
 	.logo {
@@ -2216,8 +2221,9 @@ textarea {
 
 			.nav-link {
 				color: #fff;
-				position: relative;
 				padding: 0;
+				line-height: 2;
+				position: relative;
 
 				&:before {
 					content: '';
@@ -2972,10 +2978,15 @@ textarea {
 				color: rgba(255, 255, 255, 0.3);
 				line-height: 53px;
 				position: absolute;
-				left: 0;
 				top: 0;
 				z-index: -1;
 				margin: 0;
+				&:dir(rtl) {
+					right: 0;
+				}
+				&:dir(rtl) {
+					left: 0;
+				}
 			}
 
 			position: relative;
@@ -12014,11 +12025,16 @@ textarea {
 	color: #fff;
 
 	&:first-letter {
-		text-transform: uppercase;
-		font-size: 300px;
-		text-shadow: 2px -0.9px 0px rgba(225, 163, 76, 1);
-		color: #1d2046;
 		padding-right: 15px;
+		&:dir(rtl) {
+			color: rgba(225, 163, 76, 1);
+		}
+		&:dir(ltr) {
+			text-transform: uppercase;
+			font-size: 300px;
+			text-shadow: 2px -0.9px 0px rgba(225, 163, 76, 1);
+			color: #1d2046;
+		}
 	}
 
 	span {
@@ -12270,7 +12286,8 @@ textarea {
 
 .theme-main-menu.theme-menu-three.fixed {
 	padding: 20px 0 5px;
-	background: rgba(29, 31, 66, 0.98);
+	backdrop-filter: blur(8px);
+	background: rgba(29, 31, 66, 0.93);
 	border-bottom: 1px solid rgba(255, 255, 255, 0.03);
 }
 
