fix: fixed some contents

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2940,7 +2940,7 @@ textarea {
 			display: inline-block;
 			font-size: 24px;
 			color: #ffffff;
-			margin-right: 65px;
+			margin-right: 45px;
 			cursor: pointer;
 		}
 
@@ -12012,7 +12012,7 @@ textarea {
 
 .theme-title-two {
 	color: #fff;
-	font-size: 144px;
+	font-size: 8rem;
 	position: relative;
 	margin-bottom: 3rem;
 
